[Dcon2] - yyyy-mm-dd
	* wasm: implemented basic db functions needed for persistent state storage
	* wasm: merge branch and implement prototype working smart contracts.
	* doc: improved formatting and reorganized the structure.
